--- a/src/app/landlords/landlord-form/landlord-form.component.html
+++ b/src/app/landlords/landlord-form/landlord-form.component.html
@@ -22,7 +22,7 @@
                         ease-in-out
                         m-0
                         focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
-                        placeholder="Landlord code" formControlName="code">
+                        placeholder="Landlord code" formControlName="code" [class.invalid]="code?.invalid && code?.touched">
                     <label for="code" class="text-gray-700">Landlord code</label>
                 </div>
                 <hr>
@@ -80,7 +80,7 @@
                         ease-in-out
                         m-0
                         focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" id="username"
-                        placeholder="Username" formControlName="username">
+                        placeholder="Username" formControlName="username" [class.invalid]="username?.invalid && username?.touched">
                     <label for="username" class="text-gray-700">Username</label>
                 </div>
                 <div class="form-floating mb-3 xl:w-96">
@@ -118,7 +118,7 @@
                     ease-in-out
                     m-0
                     focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" id="password"
-                        placeholder="Password" formControlName="password">
+                        placeholder="Password" formControlName="password" [class.invalid]="password?.invalid && password?.touched">
                     <label for="password" class="text-gray-700">Password</label>
                 </div>
                 <div class="form-floating mb-3 xl:w-96">
@@ -137,7 +137,7 @@
                     ease-in-out
                     m-0
                     focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" id="confirmPassword"
-                        placeholder="Confirm password" formControlName="confirmPassword">
+                        placeholder="Confirm password" formControlName="confirmPassword" [class.invalid]="confirmPassword?.invalid && confirmPassword?.touched">
                     <label for="confirmPassword" class="text-gray-700">Confirm password</label>
                 </div>
                 <div class="form-floating mb-3 xl:w-96">
@@ -156,7 +156,7 @@
                     ease-in-out
                     m-0
                     focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" id="phoneNumber"
-                        placeholder="Phone number" formControlName="phoneNumber">
+                        placeholder="Phone number" formControlName="phoneNumber" [class.invalid]="phoneNumber?.invalid && phoneNumber?.touched">
                     <label for="phoneNumber" class="text-gray-700">Phone number</label>
                 </div>
                 <div class="border rounded-md bg-blue-900 text-white px-5 py-2 text-center shadow-lg hover:cursor-pointer hover:border hover:border-blue-900 hover:text-blue-900 hover:bg-transparent">
