--- a/src/app/landlords/landlord-list/landlord-list.component.html
+++ b/src/app/landlords/landlord-list/landlord-list.component.html
@@ -12,23 +12,13 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="bg-white border-b">
-                            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">1</td>
-                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-                                Mark
-                            </td>
-                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-                                Otto
-                            </td>
-                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-                                @mdo
-                            </td>
-                            <td>
-
-                            </td>
-                            <td>
-
-                            </td>
+                        <tr class="bg-white border-b" *ngFor="let landlord of landlordList">
+                            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{landlord.code}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{landlord.firstname}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{landlord.lastname}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{landlord.phoneNumber}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{landlord.phoneNumber}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{landlord.phoneNumber}}</td>
                             <td class="px-3">
                                 <div class="flex flex-row space-x-4 text-sm text-gray-900 font-light">
                                     <div class="flex flex-row space-x-2 border border-green-900 rounded-md py-1 px-2 text-white bg-green-900 hover:bg-transparent hover:border hover:border-green-900 hover:text-green-900 hover:cursor-pointer active:shadow-lg transition duration-150 ease-in-out"
