--- a/src/app/landlords/landlord-list/landlord-list.component.html
+++ b/src/app/landlords/landlord-list/landlord-list.component.html
@@ -22,7 +22,7 @@
                             <td class="px-3">
                                 <div class="flex flex-row space-x-4 text-sm text-gray-900 font-light">
                                     <div class="flex flex-row space-x-2 border border-green-900 rounded-md py-1 px-2 text-white bg-green-900 hover:bg-transparent hover:border hover:border-green-900 hover:text-green-900 hover:cursor-pointer active:shadow-lg transition duration-150 ease-in-out"
-                                        data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
+                                        data-bs-toggle="modal" data-bs-target="#exampleModalCenter" (click)="getCurrentLandlord(landlord)">
                                         <div>
                                             <i class="fa-solid fa-pencil"></i>
                                         </div>
@@ -31,7 +31,7 @@
                                         </div>
                                     </div>
                                     <div
-                                        class="flex flex-row space-x-2 border border-red-900 rounded-md py-1 px-2 text-white bg-red-900 hover:bg-transparent hover:border hover:border-red-900 hover:text-red-900 hover:cursor-pointer">
+                                        class="flex flex-row space-x-2 border border-red-900 rounded-md py-1 px-2 text-white bg-red-900 hover:bg-transparent hover:border hover:border-red-900 hover:text-red-900 hover:cursor-pointer" routerLink="landlord-update-form">
                                         <div>
                                             <i class="fa-solid fa-trash"></i>
                                         </div>
@@ -58,14 +58,14 @@
             <div
                 class="modal-header flex flex-shrink-0 items-center justify-between p-4 border-b border-gray-200 rounded-t-md">
                 <h5 class="text-xl font-medium leading-normal text-gray-800" id="exampleModalScrollableLabel">
-                    Modal title
+                    Landlord Update
                 </h5>
                 <button type="button"
                     class="btn-close box-content w-4 h-4 p-1 text-black border-none rounded-none opacity-50 focus:shadow-none focus:outline-none focus:opacity-100 hover:text-black hover:opacity-75 hover:no-underline"
                     data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body relative p-4">
-                <p>This is a vertically centered modal.</p>
+                <app-landlord-update-form [landlord]="currentLandlord"></app-landlord-update-form>
             </div>
             <div
                 class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md">
@@ -73,10 +73,6 @@
                     class="inline-block px-6 py-2.5 bg-red-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-red-700 hover:shadow-lg focus:bg-red-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-red-800 active:shadow-lg transition duration-150 ease-in-out"
                     data-bs-dismiss="modal">
                     Close
-                </button>
-                <button type="button"
-                    class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out ml-1">
-                    Save changes
                 </button>
             </div>
         </div>
