--- a/src/app/buildings/building-list/building-list.component.html
+++ b/src/app/buildings/building-list/building-list.component.html
@@ -1,8 +1,8 @@
-<div class="flex flex-col max-w-min">
+<div class="flex flex-col">
     <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
         <div class="py-4 inline-block min-w-full sm:px-6 lg:px-8">
             <div class="overflow-hidden">
-                <table class="min-w-full text-center">
+                <table class="min-w-full text-center max-w-screen-lg">
                     <thead class="border-b bg-blue-800">
                         <tr>
                             <th scope="col" class="text-sm font-medium text-white px-6 py-4"
@@ -11,23 +11,24 @@
                             </th>
                         </tr>
                     </thead>
+
                     <tbody>
-                        <tr class="bg-white border-b" *ngFor="let buidling of buildingList">
+                        <tr class="bg-white border-b" *ngFor="let buidling of allBuildings">
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{buidling.code}}</td>
-                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{buidling.owner}}</td>
-                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{buidling.curfew}}</td>
-                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{buidling.parkingPrice}}</td>
-                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{buidling.waterPrice}}</td>
-                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{buidling.electricityPrice}}</td>
-                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{buidling.bookingFee}}</td>
-                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{buidling.contractAndTerms}}</td>
-                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{buidling.latitude}}</td>
-                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{buidling.longitude}}</td>
-                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">{{buidling.location}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-pre-wrap">{{buidling.landlord.code}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-pre-wrap">{{buidling.curfew}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-pre-wrap">{{buidling.parking}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-pre-wrap">{{buidling.waterPrice}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-pre-wrap">{{buidling.electricityPrice}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-pre-wrap">{{buidling.bookingFee}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-pre-wrap">{{buidling.contractAndTerms}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-pre-wrap">{{buidling.latitude}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-pre-wrap">{{buidling.longitude}}</td>
+                            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-pre-wrap">{{buidling.location}}</td>
                             <td class="px-3">
                                 <div class="flex flex-row space-x-4 text-sm text-gray-900 font-light">
                                     <div class="flex flex-row space-x-2 border border-green-900 rounded-md py-1 px-2 text-white bg-green-900 hover:bg-transparent hover:border hover:border-green-900 hover:text-green-900 hover:cursor-pointer active:shadow-lg transition duration-150 ease-in-out"
-                                        data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
+                                        data-bs-toggle="modal" data-bs-target="#exampleModalCenter" (click)="getCurrentBuilding(buidling)">
                                         <div>
                                             <i class="fa-solid fa-pencil"></i>
                                         </div>
@@ -36,7 +37,7 @@
                                         </div>
                                     </div>
                                     <div
-                                        class="flex flex-row space-x-2 border border-red-900 rounded-md py-1 px-2 text-white bg-red-900 hover:bg-transparent hover:border hover:border-red-900 hover:text-red-900 hover:cursor-pointer">
+                                        class="flex flex-row space-x-2 border border-red-900 rounded-md py-1 px-2 text-white bg-red-900 hover:bg-transparent hover:border hover:border-red-900 hover:text-red-900 hover:cursor-pointer" (click)="deleteBuilding(buidling.id)">
                                         <div>
                                             <i class="fa-solid fa-trash"></i>
                                         </div>
@@ -55,22 +56,22 @@
 </div>
 
 
-<div class="modal fade fixed top-0 left-0 hidden w-full h-full outline-none overflow-x-hidden overflow-y-auto"
+<div class="modal fade fixed top-0 left-0 hidden h-full w-full outline-none overflow-x-hidden overflow-y-auto"
     id="exampleModalCenter" tabindex="-1" aria-labelledby="exampleModalCenterTitle" aria-modal="true" role="dialog">
-    <div class="modal-dialog modal-dialog-centered relative w-auto pointer-events-none">
+    <div class="modal-dialog modal-dialog-centered relative min-w-max pointer-events-none">
         <div
             class="modal-content border-none shadow-lg relative flex flex-col w-full pointer-events-auto bg-white bg-clip-padding rounded-md outline-none text-current">
             <div
                 class="modal-header flex flex-shrink-0 items-center justify-between p-4 border-b border-gray-200 rounded-t-md">
                 <h5 class="text-xl font-medium leading-normal text-gray-800" id="exampleModalScrollableLabel">
-                    Modal title
+                    Update Building
                 </h5>
                 <button type="button"
                     class="btn-close box-content w-4 h-4 p-1 text-black border-none rounded-none opacity-50 focus:shadow-none focus:outline-none focus:opacity-100 hover:text-black hover:opacity-75 hover:no-underline"
                     data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body relative p-4">
-                <p>This is a vertically centered modal.</p>
+                <app-building-update-form [building]="currentBuilding"></app-building-update-form>
             </div>
             <div
                 class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md">
@@ -78,10 +79,6 @@
                     class="inline-block px-6 py-2.5 bg-red-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-red-700 hover:shadow-lg focus:bg-red-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-red-800 active:shadow-lg transition duration-150 ease-in-out"
                     data-bs-dismiss="modal">
                     Close
-                </button>
-                <button type="button"
-                    class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out ml-1">
-                    Save changes
                 </button>
             </div>
         </div>
