--- a/src/app/landlords/landlord-update-form/landlord-update-form.component.html
+++ b/src/app/landlords/landlord-update-form/landlord-update-form.component.html
@@ -4,7 +4,7 @@
             <i class="fa-solid fa-user-pen"></i>
             <p>Landlord Update</p>
         </legend>
-        <form [formGroup]="landlordRegister" (ngSubmit)="register()">
+        <form [formGroup]="landlordRegister" (ngSubmit)="updateLandlord()">
             <div class="flex flex-col space-y-3 items-stretch justify-center">
                 <div class="form-floating mb-3 xl:w-96">
                     <input type="input" class="form-control
@@ -21,8 +21,8 @@
                         transition
                         ease-in-out
                         m-0
-                        focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" value="{{landlord?.code}}"
-                        placeholder="Landlord code" formControlName="code" [class.invalid]="code?.invalid && code?.touched" form>
+                        focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-nones"
+                        placeholder="Landlord code" formControlName="code" [class.invalid]="code?.invalid && code?.touched">
                     <label for="code" class="text-gray-700">Landlord code</label>
                 </div>
                 <hr>
@@ -41,46 +41,8 @@
                         transition
                         ease-in-out
                         m-0
-                        focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" id="firstname"
-                        placeholder="First name" formControlName="firstname" value="{{landlord?.firstname}}">
-                    <label for="firstname" class="text-gray-700">Firstname</label>
-                </div>
-                <div class="form-floating mb-3 xl:w-96">
-                    <input type="text" class="form-control
-                        block
-                        w-full
-                        px-3
-                        py-1.5
-                        text-base
-                        font-normal
-                        text-gray-700
-                        bg-white bg-clip-padding
-                        border border-solid border-gray-300
-                        rounded
-                        transition
-                        ease-in-out
-                        m-0
-                        focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" id="lastname"
-                        placeholder="Last name" formControlName="lastname" value="{{landlord?.lastname}}">
-                    <label for="lastname" class="text-gray-700">Lastname</label>
-                </div>
-                <div class="form-floating mb-3 xl:w-96">
-                    <input type="text" class="form-control
-                        block
-                        w-full
-                        px-3
-                        py-1.5
-                        text-base
-                        font-normal
-                        text-gray-700
-                        bg-white bg-clip-padding
-                        border border-solid border-gray-300
-                        rounded
-                        transition
-                        ease-in-out
-                        m-0
                         focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" id="username"
-                        placeholder="Username" formControlName="username" [class.invalid]="username?.invalid && username?.touched" value="{{landlord?.username}}">
+                        placeholder="Username" formControlName="username" [class.invalid]="username?.invalid && username?.touched">
                     <label for="username" class="text-gray-700">Username</label>
                 </div>
                 <div class="form-floating mb-3 xl:w-96">
@@ -98,65 +60,8 @@
                     transition
                     ease-in-out
                     m-0
-                    focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" id="email"
-                        placeholder="name@example.com" formControlName="email" value="{{landlord?.email}}">
-                    <label for="email" class="text-gray-700">Email address</label>
-                </div>
-                <div class="form-floating mb-3 xl:w-96">
-                    <input type="password" class="form-control
-                    block
-                    w-full
-                    px-3
-                    py-1.5
-                    text-base
-                    font-normal
-                    text-gray-700
-                    bg-white bg-clip-padding
-                    border border-solid border-gray-300
-                    rounded
-                    transition
-                    ease-in-out
-                    m-0
-                    focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" id="password"
-                        placeholder="Password" formControlName="password" [class.invalid]="password?.invalid && password?.touched">
-                    <label for="password" class="text-gray-700">Password</label>
-                </div>
-                <div class="form-floating mb-3 xl:w-96">
-                    <input type="password" class="form-control
-                    block
-                    w-full
-                    px-3
-                    py-1.5
-                    text-base
-                    font-normal
-                    text-gray-700
-                    bg-white bg-clip-padding
-                    border border-solid border-gray-300
-                    rounded
-                    transition
-                    ease-in-out
-                    m-0
-                    focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" id="confirmPassword"
-                        placeholder="Confirm password" formControlName="confirmPassword" [class.invalid]="confirmPassword?.invalid && confirmPassword?.touched">
-                    <label for="confirmPassword" class="text-gray-700">Confirm password</label>
-                </div>
-                <div class="form-floating mb-3 xl:w-96">
-                    <input type="email" class="form-control
-                    block
-                    w-full
-                    px-3
-                    py-1.5
-                    text-base
-                    font-normal
-                    text-gray-700
-                    bg-white bg-clip-padding
-                    border border-solid border-gray-300
-                    rounded
-                    transition
-                    ease-in-out
-                    m-0
                     focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" id="phoneNumber"
-                        placeholder="Phone number" formControlName="phoneNumber" [class.invalid]="phoneNumber?.invalid && phoneNumber?.touched" value="{{landlord?.phoneNumber}}">
+                        placeholder="Phone number" formControlName="phoneNumber" [class.invalid]="phoneNumber?.invalid && phoneNumber?.touched">
                     <label for="phoneNumber" class="text-gray-700">Phone number</label>
                 </div>
                 <div class="border rounded-md bg-blue-900 text-white px-5 py-2 text-center shadow-lg hover:cursor-pointer hover:border hover:border-blue-900 hover:text-blue-900 hover:bg-transparent">
